# libSpikes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libSpikes/: Core
libSpikes/src/: CMakeLists.txt
libSpikes/src/Core/: FileReader.cpp  FileReader.h  alphanum.h
libs/: LICENSE
